<resources>
    <string name="app_name">SteticApp</string>

    <string name="wellcome">Bienvenido a nuestra STETICAPP</string>
    <string name="explain">En esta App puedes hacer operaciones con Clientes, Productos y Tiendas</string>

    <string name="create">Crear</string>
    <string name="delete">Borrar</string>
    <string name="details">Detalles</string>
    <string name="cancel">Cancelar</string>
    <string name="modify">Modificar</string>
    <string name="search">Buscar</string>
    <string name="back">Atrás</string>

    <string name="confirmation">Confirmación</string>
    <string name="no">NO</string>
    <string name="yes">SI</string>


    <string name="client_name">Nombre</string>
    <string name="client_lastname">Apellido</string>
    <string name="client_dni">DNI</string>
    <string name="client_city">Ciudad</string>
    <string name="client_vip">VIP</string>

    <string name="client_insert">Cliente añadido a la base de datos</string>
    <string name="modify_client">Modificar cliente</string>
    <string name="search_client">Escribe nombre, apellido o ciudad para buscar</string>
    <string name="delete_client_alert">¿Estás seguro de borrar este cliente?</string>

    <string name="product_name">Nombre</string>
    <string name="product_size">Tamaño</string>
    <string name="product_description">Descripción</string>
    <string name="product_price">Precio</string>
    <string name="register_data">Fecha de registro</string>
    <string name="is_dangerous">Peligroso</string>

    <string name="product_insert">Producto añadido a la base de datos</string>
    <string name="modify_product">Modificar producto</string>
    <string name="search_product">Escribe id, nombre o si es peligroso para la búsqueda</string>
    <string name="delete_product_alert">¿Estás seguro de borrar este producto?</string>

    <string name="shop_name">Nombre</string>
    <string name="shop_address">Dirección</string>
    <string name="shop_city">Ciudad</string>
    <string name="has_solarium">Solarium</string>

    <string name="shop_insert">Tienda añadida a la base de datos</string>
    <string name="modify_shop">Modificar la tienda</string>
    <string name="search_shop">Escribe el id o la ciudad a buscar</string>
    <string name="delete_shop_alert">¿Estás seguro de borrar esta tienda?</string>
    <string name="undelete_shop_toast">No se puede borrar una tienda si tiene empleados, por favor bórralos antes</string>

    <string name="client_id_text">Id del cliente</string>
    <string name="client_name_text">Nombre del cliente</string>
    <string name="client_lastname_text">Apellido del cliente</string>
    <string name="client_dni_text">DNI del cliente</string>
    <string name="product_id_text">Id del producto</string>
    <string name="product_name_text">Nombre del producto</string>
    <string name="product_description_text">Descripción del producto</string>
    <string name="product_price_text">Precio del producto</string>
    <string name="shop_name_text">Nombre de la tienda</string>
    <string name="shop_address_text">Dirección</string>
    <string name="shop_city_text">Ciudad</string>

    <string name="product_successful_added">Producto insertado correctamente</string>
    <string name="product_successful_modified">Producto modificado correctamente</string>
    <string name="product_added_favorites">Producto añadido a FAVORITOS</string>

    <string name="client_successful_added">Cliente insertado correctamente</string>
    <string name="client_successful_modified">Cliente modificado correctamente</string>

    <string name="shop_successful_added">Tienda insertado correctamente</string>
    <string name="shop_successful_modified">Tienda modificado correctamente</string>

</resources>