<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".view.Clients.ClientEditView">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Id" />

        <EditText
            android:id="@+id/edit_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/client_name" />

        <EditText
            android:id="@+id/edit_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_firstName"
            android:layout_marginTop="8dp"
            android:hint="@string/client_lastname" />

        <EditText
            android:id="@+id/edit_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_lastName"
            android:layout_marginTop="8dp"
            android:hint="@string/client_dni" />


        <EditText
            android:id="@+id/edit_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_dni"
            android:layout_marginTop="8dp"
            android:hint="@string/client_city" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp">


        <Button
            android:id="@+id/btnModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="modifyClient"
            android:text="@string/modify_client" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
