<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_clientId_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ID"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_clientId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_firstName_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/detail_lastName_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_lastname"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/detail_dni_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_dni"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />


            <TextView
                android:id="@+id/detail_city_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_city"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />



            <TextView
                android:id="@+id/detail_vip_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_vip"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/detail_vip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="#000000" />

            <!-- Botones -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
